# 22850034-hcmus-assignment

./: .gitmodules  README.md
BAA00005_Introducing_to_Economic/docs/: 1.1 Các vấn đề kinh tế.pptx  1.2 Khan hiếm và nguồn lực.pptx  1.3 Vai trò của thị trường.pptx  1.4 Thực chứng và chuẩn tắc.pptx  1.5 Kinh tế học vi mô và kinh tế học vĩ mô.pptx  2.1 Khái niệm thị trường.pptx  2.2. Cầu, cung và sự cân bằng.pptx  2.3. Đường cầu và đường cung.pptx  2.4 Đằng sau đường cầu.pptx  2.5 Sự dịch chuyển của đường cầu.pptx  2.6 Đằng sau đường cung.pptx  2.7 Sự dịch chuyển của đường cung.pptx  2.8 Thị trường tự do và sự kiểm soát giá cả.pptx  2.9 Sản xuất cái gì, như thế nào và cho ai.pptx  3.1 Giá, lượng cầu và tổng chi tiêu.pptx  3.2 Độ co giãn của cầu theo giá.pptx  3.3 Độ co giãn của cầu theo thu nhập.pptx  3.4 Độ co giãn chéo của cầu.pptx  3.5 Độ co giãn của cung.pptx  3.6 Can thiep cua chinh phu.pptx  4.1 Tổ chức doanh nghiệp.pptx  4.2 Các hãng và tối đa hoá lợi nhuận.pptx  4.3 Quyết định cung của hãng.pptx  4.4 Chi phí cận biên và doanh thu cận biên.pptx  4.5 Đường chi phí cận biên và doanh thu cận biên.pptx  5.1. Đầu vào và đầu ra.pptx  5.2. Chi phí và lựa chọn công nghệ.pptx  5.4. Tổng chi phí và chi phí trung bình.pptx  5.5. Chi phí trung bình và chi phí cận biên.pptx  5.6. Quyết định sản lượng mỗi hãng trong ngắn hạn.pptx  6.1 Những vấn đề lớn.pptx  6.2 Thực tế.pptx  6.3 Tổng quan.pptx  6.4 Hạch toán thu nhập quốc dân_Bài 1.pptx  6.4 Hạch toán thu nhập quốc dân_Bài 2.pptx  6.4 Hạch toán thu nhập quốc dân_Bài 3.pptx  6.4 Hạch toán thu nhập quốc dân_Bài 4.pptx  6.5 GNP đo lường gi.pptx  6.6 Lạm phát.pptx  6.7 Thất nghiệp.pptx
MTH00054_logic/: check.rb
data_organization/ex3/: Time.h  (+9 more)
data_organization/ex4/: .gitignore  CMakeLists.txt  FileProcessor.cpp  FileProcessor.h  FileProcessor_test.cpp  README.md  README_Vietnamese.md  VIQR_UTF8  VIQR_UTF8.cpp  VIQR_UTF8.h  VIQR_UTF8_test.cpp  in.txt  main.cpp  test_VIQR_UTF8.cpp
database_management_system/: query_testing.sql
documents/: template.tex
software_testing/: 22850034_Test Summary Report.docx  22850034_Week10_TestReport.xlsx  22850034_Week11_TestReport.xlsx  22850034_Week12.xlsx
system_analysis/: LTGK.docx
(+309 files in other folders)
